<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright 2012 software2012team23
 
  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at
 
     http://www.apache.org/licenses/LICENSE-2.0
 
  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
  -->
<resources>

    <string name="hello">Hello World, MainActivity!</string>
    <string name="app_name">WebSMSTool</string>
    
    <string name="settings">Settings</string>
    <string name="properties">Properties</string>
    <string name="username">User name</string>
    <string name="password">Password</string>
    <string name="serverconfig">Server configuration</string>
    <string name="port">Port</string>
    <string name="default_port">8887</string>
    <string name="security">Security</string>
    <string name="http">http</string>
    <string name="https">https</string>
    <string name="savesettings">Save</string>
    <string name="startstop">Starts/Stops the server</string>
    <string name="info">Info</string>
    <string name="aboutTitle">About</string>
    <string name="aboutDeveloperTitle">\nDevelopers</string>
    <string name="aboutDevelopers">Martin Decker\nHerman Felbinger\nThomas Gödl\nStefan Lexow\nRaoul Rubien</string>
    <string name="aboutDesignerTitle">\nDesigner</string>
    <string name="aboutDesigners">Carmen Krautberger\nMelanie Lindner</string>
    <string name="aboutInfo">Developed during the course \nSoftware 2012 @ Graz University of Technology</string>
    <string name="aboutFurtherInformation">\nFurther informations and contact</string>
    <string name="aboutInfoGoogleCodeLinks">Project-Page:\nhttp://code.google.com/p/software2012team23\n\nE-Mail:\nsoftware2012team23@googlecode.com</string>
    <string name="aboutSupervisorTitle">\nSupervisor</string>
    <string name="aboutSupervisor">Wolfgang Slany</string>
    <string name="actionbar_about">About SMSTool</string>
    <string name="actionbar_home">Home</string>
    <string name="actionbar_settings">Settings</string>
</resources>