<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/tv_about_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textAppearance="?android:attr/textAppearanceLarge" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/aboutInfo" />

    <TextView
        android:id="@+id/tv_developer_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/aboutDeveloperTitle"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/tv_developers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/aboutDevelopers" />

    <TextView
        android:id="@+id/tv_designer_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/aboutDesignerTitle"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/tv_designers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/aboutDesigners" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/aboutSupervisorTitle"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/aboutSupervisor" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/aboutFurtherInformation"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/aboutInfoLink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/aboutInfoGoogleCodeLinks" />

</LinearLayout>