<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/tv_properties"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/properties"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/tv_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username" />

    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10" 
        android:inputType="text"
        android:selectAllOnFocus="true">

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/tv_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword" 
        android:selectAllOnFocus="true"/>

    <TextView
        android:id="@+id/tv_serverconfig"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/serverconfig"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/tv_port"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/port" />

    <EditText
        android:id="@+id/port"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:text="@string/default_port"
        android:inputType="number"
        android:selectAllOnFocus="true"/>

    <TextView
        android:id="@+id/tv_security"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/security"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <RadioGroup
        android:id="@+id/rg_security"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <RadioButton
            android:id="@+id/http"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/http" />

        <RadioButton
            android:id="@+id/https"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/https" />

    </RadioGroup>

    <Button
        android:id="@+id/savesettings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/savesettings"
        android:onClick="saveSettings" />

</LinearLayout>